test/official_tests/field/set_on_class.lox
class Foo {}
Foo.bar = "value"; // error: {"line":2,"message":"Only class instances have properties","type":"RuntimeError"}
